--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "utgwkk <utagawakiki@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "graphql": "^16.5.0",
     "react-relay": "^13.2.0"
   },
   "devDependencies": {
