--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "devDependencies": {
     "@types/react-relay": "^13.0.2",
-    "relay-compiler": "^13.2.0"
+    "relay-compiler": "^13.2.0",
+    "@graphql-codegen/typescript": "2.4.11",
+    "@graphql-codegen/typescript-operations": "2.4.0",
+    "@graphql-codegen/cli": "2.6.2"
   },
   "relay": {
     "schema": "./schema.graphql",
     "src": "./relay-compiler",
     "language": "typescript"
+  },
+  "scripts": {
+    "codegen": "graphql-codegen --config codegen.yml"
   }
 }
